fixed clipping

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,7 @@ body {
 
 @media (width > 1100px) {
     #ourTeamContainer {
+        margin-top: 40px;
         font-weight: normal;
         background-color: rgb(255, 255, 255);
         display: grid;
